# cardiomyocyte_emulator

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: demos.yml  python-package.yml
cardiomyocyte_emulator/: __init__.py  emulator.py  emulator_hyperparams.npz  emulator_state.pt  interactive_gui.py  inverse.py
demos/: inverse.ipynb  simple_forward.ipynb
demos/data/ead/: ap_data.npz  max_conds.csv
demos/data/syn/: ap_data.npz  max_conds.csv
tests/: test_emulator.py  test_inverse.py  test_utils.py
