[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiomyocyte_emulator"
version = "0.9"
authors = [
    {name="Grandits et al. (see associated paper)", email="tomdev@gmx.net"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "torch", 
    "tqdm", 
    "scipy", 
    "numpy"
]


[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pandas"]
docs = ["sphinx", "pydata_sphinx_theme", "nbsphinx", "sphinx-gallery", "nbsphinx_link"]
demos = ["jupyter", "matplotlib"]
